<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".ui.activities.launcher.LauncherActivity">
	
	<include layout="@layout/toolbar"/>
	
	<Button
		android:id="@+id/heroes"
		android:text="@string/heroes"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/marginHalf"
		android:layout_marginLeft="@dimen/marginNormal"
		android:layout_marginRight="@dimen/marginNormal"/>
	
	<Button
		android:id="@+id/champions"
		android:text="@string/champions"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/marginNormal"
		android:layout_marginRight="@dimen/marginNormal"/>
	
	<Button
		android:id="@+id/trainings"
		android:text="@string/trainings"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/marginNormal"
		android:layout_marginRight="@dimen/marginNormal"
		android:layout_marginBottom="@dimen/marginHalf"/>
</LinearLayout>