<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".ui.fragments.other.OtherFragment">
    
    <data>
        <import type="com.devtau.ironHeroes.enums.HumanType" />
        <import type="com.devtau.ironHeroes.BuildConfig" />
        <import type="android.view.View" />
        
        <variable
            name="viewModel"
            type="com.devtau.ironHeroes.ui.fragments.other.OtherViewModel" />
    </data>
    
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/heroes"
                android:text="@string/trainees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/marginNormal"
                style="@style/SelectableItemBackground"
                android:onClick="@{() -> viewModel.openHero(HumanType.HERO)}"/>
            
            <TextView
                android:id="@+id/champions"
                android:text="@string/trainers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/marginNormal"
                style="@style/SelectableItemBackground"
                android:onClick="@{() -> viewModel.openHero(HumanType.CHAMPION)}"/>
            
            <TextView
                android:id="@+id/database"
                android:text="@string/database"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/marginNormal"
                style="@style/SelectableItemBackground"
                android:visibility="@{BuildConfig.DEBUG ? View.VISIBLE : View.GONE}"
                android:onClick="@{() -> viewModel.openDBViewer()}"/>
            
            <TextView
                android:id="@+id/exportToFile"
                android:text="@string/export_to_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/marginNormal"
                style="@style/SelectableItemBackground"
                android:onClick="@{() -> viewModel.exportToFileRequested()}"/>
            
            <TextView
                android:id="@+id/importFromFile"
                android:text="@string/import_from_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/marginNormal"
                style="@style/SelectableItemBackground"
                android:onClick="@{() -> viewModel.importFromFileRequested()}"/>
            
            <TextView
                android:id="@+id/clearDB"
                android:text="@string/clear_db"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/marginNormal"
                style="@style/SelectableItemBackground"
				android:onClick="@{() -> viewModel.clearDBRequested()}"/>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>