<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.functions.FunctionsActivity">
    
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/functionsPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray235"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:background="@color/colorGray245">
        
        <TextView
            android:id="@+id/trainings"
            android:text="@string/trainings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:drawableTop="@drawable/ic_workouts_gray"
            style="@style/SelectableItemBackground"
            android:gravity="center_horizontal"/>
        
        <TextView
            android:id="@+id/statistics"
            android:text="@string/statistics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:drawableTop="@drawable/ic_statistics_gray"
            style="@style/SelectableItemBackground"
            android:gravity="center_horizontal"/>
        
        <TextView
            android:id="@+id/settings"
            android:text="@string/settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:drawableTop="@drawable/ic_settings_gray"
            style="@style/SelectableItemBackground"
            android:gravity="center_horizontal"/>
        
        <TextView
            android:id="@+id/other"
            android:text="@string/other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:drawableTop="@drawable/ic_other_gray"
            style="@style/SelectableItemBackground"
            android:gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>
